<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".TimeUpScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_winner"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_menu"
        android:textSize="24sp"
        android:onClick="mainMenu" />

    <Button
        android:id="@+id/view_records_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_leaderboard"
        android:textSize="24sp"
        android:onClick="viewLeaderboard" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/play_again"
        android:textSize="24sp"
        android:onClick="playAgain" />

</LinearLayout>