<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivityPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="55sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_game"
        android:textSize="24sp"
        android:onClick="startGame" />

    <Button
        android:id="@+id/start_blitz_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_blitz_game"
        android:textSize="24sp"
        android:onClick="startBlitzGame" />

    <Button
        android:id="@+id/view_records_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/records"
        android:textSize="24sp"
        android:onClick="viewRecords" />

    <Button
        android:id="@+id/delete_all_scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Clean Databse"
        android:textSize="24sp"
        android:onClick="deleteAllScores" />


</LinearLayout>
